--- a/Estadia KED/Estadia KED/css/main.css
+++ b/Estadia KED/Estadia KED/css/main.css
@@ -110,3 +110,23 @@ input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hove
   border: 1px solid #ccc;
   border-top: none;
 }
+
+.mainPago{
+    width: 50%;
+    background-color: rgba(255,255,255,.4);
+    text-align: center;
+	border-radius: 5px;
+	margin: 2% auto 0 auto;
+	padding: 3%;
+    position: relative;
+}
+
+.mainCarrito{
+    width: 70%;
+    background-color: rgba(255,255,255,.4);
+    text-align: center;
+	border-radius: 5px;
+	margin: 2% auto 0 auto;
+	padding: 3%;
+    position: relative;
+}
